apis: docs for create product
